Fix focusScopeItemChange setting crash

Delay focusScopeItemChange to after reparenting, to prevent
an invalid focusScopeItem pointer crash.

Task-number: QTBUG-21640
Reviewed-by: Martin Jones